@@ -16,13 +16,17 @@ the CVS logs is updated daily at the following URL:
 Version 4.10.1 (??)
 -------------------
 
+- Fixed problem with WMS CONNECTION strings that contains a layer name 
+  with a "." in them (bug 1996)
+
 - Enabled setting of a layer tileindex (e.g. map_layername_tileindex) via the 
   CGI program. (bug 1992)
 
 - Added feature to the CGI to check runtime substitutions against patterns
   defined in layer metadata. (bug 1918)
 
-- Fixed INCLUDEs to accept paths relative to the location of the mapfile (bug 1880)
+- Fixed INCLUDEs to accept paths relative to the location of the mapfile
+  (bug 1880)
 
 - maperror.c: fix long in-image error message wrapping (bug 1963)
 
@@ -30,7 +34,8 @@ Version 4.10.1 (??)
 
 - Fixed setRotation() to check for MS_SUCCESS, not MS_TRUE (bug 1968)
 
-- sde->row_id_column needs to be initialized to NULL in msSDELayerOpen (bug 1953)
+- sde->row_id_column needs to be initialized to NULL in msSDELayerOpen
+  (bug 1953)
 
 - Makefile.in: fix mapogr rule so that it works with regular make (not gnumake)
 
